Tried custom data validation, cleaned up code. Returned Order page navbar to not be entire screen--too many issues associated with having it full screen. Decreased number of SessionHelper calls for each menu item in Order.cshtml by 1 by moving it to OnGet() in the code-behind. Cleaned up OrderDAL. Started custom data validation, but it will probably be dramatically changed. Added login page handler.

--- a/Marcinis/wwwroot/css/order.css
+++ b/Marcinis/wwwroot/css/order.css
@@ -1,19 +1,12 @@
 ﻿#menuNavBar {
     background-color: #8BA973;
-    width: 100vw;
+    width: 100%;
     z-index: 100;
-}
-
-#bgNav {
-    background-color: #8BA973;
-    width: 200vw;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     left: 0;
     margin-top: -15px;
-    margin-left: -125px;
-    z-index: 99;
 }
 
 h1 {
